better HttpUrlConnection handling